<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.gc</groupId>
		<artifactId>gc-boot-dependencies</artifactId>
		<version>0.0.3-SNAPSHOT</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<artifactId>gc-boot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>gc-boot</name>
	<description>Demo project for Spring Boot</description>

	<packaging>pom</packaging>

	<properties>
		<java.version>8</java.version>

		<gc-boot.version>0.0.1-SNAPSHOT</gc-boot.version>

		<swagger.version>2.9.2</swagger.version>
		<jjwt.veersion>0.9.1</jjwt.veersion>
	</properties>

	<modules>
		<module>gc-auth</module>
		<module>gc-commons</module>
		<module>gc-database</module>
		<module>gc-modules</module>
		<module>gc-starter</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>gc-auth-common</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>file-spring-boot-starter</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>gc-cache-common</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>gc-base-common</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>crud-spring-boot-starter</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>log-spring-boot-starter</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gc</groupId>
				<artifactId>gc-database-message</artifactId>
				<version>${gc-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
			</dependency>

			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jjwt.veersion}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
</project>
